1/mistakelog.txt
From here on out I will log my errors within python with an explanation of what they mean.
=====================================================================================================
BIG mistake 1
=====================================================================================================
phyton ex7.py
This runs python 2.7 which is INCOMPATIBLE with 3.6 and that is why my phython had errors in it....
====================================================================================================
ERROR 2
====================================================================================================
Traceback (most recent call last):
  File "ex8.py", line 7, in <module>
    print(formatter.format("one", 'two', 'three', "four"))
IndexError: tuple index out of range
CAUSE: This is due to me not using enough variables to assign to the formatter vairable which I changed to 5 variables
=====================================================================================================
ERROR 3
=====================================================================================================
  File "ex11.py", line 11
    
    ^
SyntaxError: unexpected EOF while parsing

CAUSE:unterminated qoutation
=====================================================================================================
ERROR 4
=====================================================================================================
This was due to an UNTERMINATED ) on the PREVIOUS LINE that is definitly a thing. If you get an error on one line look at the previous line TOO
=====================================================================================================
ERROR 5
====================================================================================================
Traceback (most recent call last):
  File "ex11.py", line 15, in <module>
    dowhatiwant = input("I am becoming more dangerous wouldnt you say",end=' ')
TypeError: input() takes no keyword arguments

CAUSE: You cant include end=' ' at the end of an input you will get an error dowhatiwant = input("I am becoming more dangerous wouldnt you say",end=' ')

ERROR 6 
 
